# sanctuary

./: .allcontributorsrc  .dockerignore  .editorconfig  .gitignore  .pnpmfile.cjs  .pnpmignore  .pre-commit-config.yaml  .typos.toml  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  README.md  REUSE.toml  SUPPORT.md  Taskfile.yml  humans.txt  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  poetry.toml  pyproject.toml  sanctuary.code-workspace
.agents/skills/agent-owasp-compliance/: SKILL.md
.agents/skills/ai-prompt-engineering-safety-review/: SKILL.md
.agents/skills/breakdown-epic-arch/: SKILL.md
.agents/skills/breakdown-epic-pm/: SKILL.md
.agents/skills/breakdown-plan/: SKILL.md
.agents/skills/convert-plaintext-to-md/: SKILL.md
.agents/skills/create-github-issue-feature-from-specification/: SKILL.md
.agents/skills/create-implementation-plan/: SKILL.md
.agents/skills/create-llms/: SKILL.md
.agents/skills/create-specification/: SKILL.md
.agents/skills/devops-rollout-plan/: SKILL.md
.devcontainer/: .env  README.md  devcontainer.json
.devcontainer/scripts/: initialize.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: architecture.yml  bootstrap-repository.yml  bug-report.yml  ci.yml  config.yml  documentation.yml  dx.yml  feature.yml  research.yml  task.yml  tech-debt.yml
.github/agents/: cleanup-specialist.agent.md  flutter-architect.agent.md  flutter-engineer.agent.md  github-issue-creator.agent.md  specfile-creator.agent.md
.github/specs/: github-issue-authoring.spec.md  github-issue-creator.spec.md  knowledge-extract.spec.md  knowledge-extractor.agent.md  reflector.spec.md  repository-evolution.spec.md  specfile.spec.md  synapse-create.spec.md  synapse-creator.agent.md
.github/workflows/: codeql.yml  contributors.yml  copilot-setup-steps.yml  dependency-review.yml  garden.yml  github-pages.yml  image-optimization.yml  ossf-scorecard.yml  osv-scan.yml  repository-intelligence.yml  reuse.yml  sanity.yml  toc.yml  vitality.yml
.staging/: .gitattributes  temp.json
.staging/actions/: build-paper.yml  devcontainer.yml  megalinter.yml  pages.yml  release-please.yml
.staging/aether/: .gitignore  README.md  aether.code-workspace
.staging/devcontainer/: docker-compose.yml
.staging/misc/: .data  .environment  .releaserc.json  aliases  externalDependencies.xml  lint.yml  nfpm.yaml  package.default.json
.staging/realignment/misc/: .clang-format  .npmrc  .npmrc3  .pre-commit-config.yaml  aliases  biome.json  idea64.vmoptions  pyproject.toml
.staging/realignment/misc/ansible/: site.yml
.staging/realignment/misc/linux/home/user/.config/emscripten/: config
.staging/realignment/misc/linux/home/user/.config/fontconfig/: fonts.conf
.staging/realignment/misc/linux/home/user/.config/zsh/: .zshenv  .zshrc
.staging/realignment/misc/linux/home/user/.files/sys/config/: .configuration  .data
.staging/realignment/misc/linux/home/user/.files/sys/config/gtk-2.0/: .gtkrc-2.0
.staging/realignment/misc/linux/home/user/.files/sys/config/vlc/: vlcrc
.staging/realignment/misc/linux/home/user/synaptic/: internal_options.sh
.staging/shell/: clear_port  pipes  set-sys-uid-max  template.sh  windows_share.sh
.taskfile/: git.yml  lint.yml  security.yml
assets/licenses/: MIT License
automation/make/: Makefile  README.md  colors.mk  common.mk  gmsl.mk  os.mk  project.mk  variables.mk
docs/: index.md
docs/architecture/: audit.md  duplication-report.md  extraction-candidates.md  index.md  modernization-report.md  responsibility-matrix.md  roadmap.md
docs/copilot/: COPILOT_ALLOWLIST.md
docs/security/: index.md
garden/: README.md
garden/.obsidian/: README.md  app.json  appearance.json  community-plugins.json  core-plugins.json  graph.json  hotkeys.json  workspace.json
garden/awesome/: README.md  awesome-obsidian.md
garden/dashboards/: Capture.md  Current Focus.md  Home.md
garden/maps/: Health.md  Projects.md  Research.md
garden/publish/: README.md
garden/quartz/: README.md  quartz.config.yaml
garden/templates/: book.md  concept.md  daily-note.md  default.md  journal-entry.md  map-of-content.md  meeting.md  monthly-review.md  project.md  research.md  resource.md  weekly-review.md
lint/: .megalinter.yml
scripts/: megalinter.sh
shell/: .shellrc  README.md
shell/.staging/: README.md  cb  cleaner.sh  computer_info.sh  ffmpeg-loop  freeze-apt  freeze-github-release  ghlabels  git_clone_orgs  init.sh  install_google_fonts.sh  list-packages  m3u8  makepng  megalinter.sh  nuke-docker  os.sh  pre-shutdown  record-audio  remove_password_pdf  run_discovery  setup-git-aliases.sh  show_hidden_files  uninstall_google_drive.sh  whats-in-port
shell/init/: bootstrap.sh  init.sh  load-core.sh  load-extensions.sh  load-platform-runtime.sh
shell/lib/: modules.sh
shell/modules/: cache.sh  environment.sh  history.sh  privacy.sh  tooling.sh  xdg.sh
shell/tests/: bootstrap.bats  cb.bats  convert-to-ico.bats  environment.bats  git-remove-exec-no-shebang.bats  history.bats  is-executable.bats  test_helper.bash  xdg.bats
skills/add-educational-comments/: SKILL.md
skills/copilot-sdk/: SKILL.md
skills/copilot-usage-metrics/: SKILL.md
skills/create-github-issues-feature-from-implementation-plan/: SKILL.md
skills/create-github-issues-for-unmet-specification-requirements/: SKILL.md
skills/email-drafter/: SKILL.md
skills/excalidraw-diagram-generator/: SKILL.md
skills/folder-structure-blueprint-generator/: SKILL.md
skills/generate-image/: SKILL.md
skills/gsap-framer-scroll-animation/: SKILL.md
skills/image-manipulation-image-magick/: SKILL.md
skills/md-to-docx/: SKILL.md
skills/multi-stage-dockerfile/: SKILL.md
skills/screen-recording/: SKILL.md
skills/sql-code-review/: SKILL.md
templates/applications/: README.md
templates/community/: GOVERNANCE.md
templates/paper/: .latexmkrc  README.md  abstract.md  notes.md  outline.md  paper.tex  references.bib  roadmap.md
tools/: ROADMAP.md
workstation/shared/: README.md
(+485 files in other folders)
