# pyproject.toml
# https://python-poetry.org/docs/pyproject/
[project]
name = "sanctuary"
version = "0.0.1"
description = ""
license-files = [
  "LICENSE*",
  "LICENCE*",
  "COPYING*",
  "AUTHORS*",
  "NOTICE*",
  "LICENSES/**/*"
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [
    { name = "Alan Szmyt", email = "szmyty@gmail.com" },
]
maintainers = [
    { name = "Alan Szmyt", email = "szmyty@gmail.com" },
]
keywords = [
  "python",
  "developer experience",
  "platform engineering",
  "templates",
  "automation",
  "documentation",
  "workstation",
  "knowledge management"
]
dynamic = [ "classifiers", "dependencies" ]

[project.urls]
homepage = "https://egohygiene.io"
repository = "https://github.com/egohygiene/sanctuary"
documentation = "https://github.com/egohygiene/sanctuary/wiki"
"Bug Tracker" = "https://github.com/egohygiene/sanctuary/issues"

[project.scripts]
sanctuary = "sanctuary.__main__:main"

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = false
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: MkDocs",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
docs = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.6,<10.0.0)",
    "mkdocstrings (>=1.0.4,<2.0.0)",
    "mkdocstrings-python (>=2.0.4,<3.0.0)",
    "mkdocs-gen-files (>=0.6.1,<0.7.0)",
    "mkdocs-literate-nav (>=0.6.3,<0.7.0)",
    "mkdocs-section-index (>=0.3.12,<0.4.0)",
    "mkdocs-awesome-pages-plugin (>=2.10.1,<3.0.0)",
    "mkdocs-git-revision-date-localized-plugin (>=1.5.3,<2.0.0)"
]
test = [
    "pytest (>=9.1.0,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "coverage[all] (>=7.14.1,<8.0.0)"
]
lint = [
    "mypy (>=2.1.0,<3.0.0)",
    "pylint (>=4.0.6,<5.0.0)",
    "ruff (>=0.15.17,<0.16.0)",
    "codespell (>=2.4.2,<3.0.0)",
    "shellcheck-py (>=0.11.0.1,<0.12.0.0)",
    "absolufy-imports (>=0.3.1,<0.4.0)"
]
security = [
    "bandit[all] (>=1.9.4,<2.0.0)",
    "pip-audit (>=2.10.1,<3.0.0)",
    "pylic (>=5.0.1,<6.0.0)",
]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)",
    "commitizen (>=4.16.3,<5.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "jsonschema (>=4.26.0,<5.0.0)",
    "tomlkit (>=0.15.0,<0.16.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "typer (>=0.26.7,<0.27.0)"
]
architecture = [
    "py2puml (>=0.11.0,<0.12.0)",
    "graphviz (>=0.21,<0.22)"
]
notebooks = [
    "jupyter (>=1.1.1,<2.0.0)",
    "jupyterlab (>=4.5.8,<5.0.0)",
    "notebook (>=7.5.7,<8.0.0)",
    "ipykernel (>=7.3.0,<8.0.0)",
    "numpy (>=2.4.6,<3.0.0)"
]
